--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "eslint-plugin-svelte3": "^3.2.1",
     "prettier": "^2.4.1",
     "prettier-plugin-svelte": "^2.4.0",
-    "svelte": "^3.44.0"
+    "svelte": "^3.44.0",
+    "svelte-preprocess": "^4.10.1",
+    "autoprefixer": "^10.4.0",
+    "tailwindcss": "^3.0.7"
   },
   "type": "module"
 }
