--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-jest": "^27.4.6",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jest": "^25.3.4",
     "eslint-plugin-svelte3": "^3.2.1",
     "jest": "^27.4.7",
     "prettier": "^2.4.1",
