--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/svelte": "^3.0.3",
     "autoprefixer": "^10.4.0",
     "babel-jest": "^27.4.6",
+    "date-fns": "^2.28.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^25.3.4",
