--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "svelte": "^3.44.0",
     "svelte-jester": "^2.1.5",
     "svelte-preprocess": "^4.10.1",
-    "tailwindcss": "^3.0.7"
+    "tailwindcss": "^3.0.7",
+    "tailwindcss-safe-area": "^0.2.2"
   },
   "type": "module",
   "jest": {
