Make it easier with more common words

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ raw_words.txt
 svenska-ord.txt
 dictionary.txt
 scraper/saol2018clean.txt
+scraper/frequent.txt
+scraper/more.txt
+scraper/scrubbed.txt
