--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@testing-library/svelte": "^3.0.3",
     "autoprefixer": "^10.4.0",
     "babel-jest": "^27.4.6",
+    "babel-plugin-transform-vite-meta-env": "^1.0.3",
     "date-fns": "^2.28.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
@@ -46,7 +47,8 @@
       "svelte"
     ],
     "moduleNameMapper": {
-      "^\\$lib(.*)$": "<rootDir>/src/lib$1"
+      "^\\$lib(.*)$": "<rootDir>/src/lib$1",
+      "^\\$app(.*)$": "<rootDir>/.svelte-kit/dev/runtime/app$1"
     }
   }
 }
