build app before tests to fix imports

--- a/package.json
+++ b/package.json
@@ -48,7 +48,10 @@
     ],
     "moduleNameMapper": {
       "^\\$lib(.*)$": "<rootDir>/src/lib$1",
-      "^\\$app(.*)$": "<rootDir>/.svelte-kit/dev/runtime/app$1"
+      "^\\$app(.*)$": [
+        "<rootDir>/.svelte-kit/dev/runtime/app$1",
+        "<rootDir>/.svelte-kit/build/runtime/app$1"
+      ]
     }
   },
   "volta": {
