--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-jest": "25.7.0",
     "eslint-plugin-svelte3": "3.4.0",
+    "ioredis": "^4.28.3",
     "jest": "27.4.7",
     "just-throttle": "4.0.1",
     "prettier": "2.5.1",
