--- a/package.json
+++ b/package.json
@@ -56,7 +56,10 @@
     }
   },
   "volta": {
-    "node": "16.13.2",
+    "node": "20.14.0",
     "yarn": "1.22.17"
+  },
+  "engines": {
+    "node": ">=20"
   }
 }
