--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,14 @@
   "useTabs": false,
   "singleQuote": false,
   "trailingComma": "es5",
-  "printWidth": 100
+  "printWidth": 100,
+  "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
+  "overrides": [
+    {
+      "files": "*.svelte",
+      "options": {
+        "parser": "svelte"
+      }
+    }
+  ]
 }
