--- a/package.json
+++ b/package.json
@@ -2,40 +2,47 @@
   "name": "ordsnille",
   "version": "0.0.1",
   "scripts": {
-    "dev": "svelte-kit dev",
-    "build": "svelte-kit build",
-    "package": "svelte-kit package",
-    "preview": "svelte-kit preview",
-    "lint": "prettier --check --plugin-search-dir=. . && eslint .",
-    "format": "prettier --write --plugin-search-dir=. .",
-    "test": "jest src",
-    "test:watch": "yarn test -- --watch"
+    "dev": "vite dev",
+    "build": "vite build",
+    "package": "vite package",
+    "preview": "vite preview",
+    "format": "prettier --write .",
+    "lint": "prettier --check . && eslint .",
+    "test": "vitest run",
+    "test:ui": "vitest --ui",
+    "test:watch": "vitest"
   },
   "devDependencies": {
     "@babel/core": "7.20.5",
     "@babel/preset-env": "7.20.2",
-    "@sveltejs/adapter-auto": "next",
-    "@sveltejs/kit": "next",
-    "@testing-library/jest-dom": "5.16.2",
-    "@testing-library/svelte": "3.2.2",
+    "@eslint/compat": "^1.2.6",
+    "@eslint/js": "^9.19.0",
+    "@sveltejs/adapter-auto": "^4.0.0",
+    "@sveltejs/kit": "^2.16.0",
+    "@sveltejs/vite-plugin-svelte": "^5.0.3",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/svelte": "^5.2.6",
+    "@vitest/ui": "^3.0.5",
     "animated-tailwindcss": "3.3.0",
     "autoprefixer": "10.4.20",
     "babel-jest": "27.5.1",
     "babel-plugin-transform-vite-meta-env": "1.0.3",
     "date-fns": "4.1.0",
-    "eslint": "8.28.0",
-    "eslint-config-prettier": "8.5.0",
-    "eslint-plugin-jest": "26.9.0",
-    "eslint-plugin-svelte3": "3.4.1",
-    "jest": "27.5.1",
+    "eslint": "^9.18.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-svelte": "^2.46.1",
+    "globals": "^15.14.0",
+    "jsdom": "^26.0.0",
     "just-throttle": "4.0.1",
-    "prettier": "2.5.1",
-    "prettier-plugin-svelte": "2.6.0",
-    "svelte": "3.55.0",
+    "prettier": "^3.4.2",
+    "prettier-plugin-svelte": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "svelte": "^5.19.8",
     "svelte-jester": "2.3.2",
-    "svelte-preprocess": "4.10.7",
-    "tailwindcss": "3.0.23",
-    "tailwindcss-safe-area": "0.2.2"
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-safe-area": "0.2.2",
+    "vite": "^6.1.0",
+    "vitest": "^3.0.5"
   },
   "type": "module",
   "jest": {
