--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "vite dev",
+    "prebuild": "node scripts/generate-version.js",
     "build": "vite build",
     "package": "vite package",
     "preview": "vite preview",
