--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@eslint/compat": "^1.2.6",
     "@eslint/js": "^9.19.0",
     "@sveltejs/adapter-auto": "^4.0.0",
+    "@sveltejs/adapter-cloudflare": "^7.2.5",
     "@sveltejs/kit": "^2.16.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.3",
     "@tailwindcss/vite": "^4.1.8",
